# lead-intelligence-ai

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py  security.py
backend/app/fixtures/: leads.py  llm_responses.py
backend/app/models/: lead.py
backend/app/services/: llm.py  salesforce.py  scoring.py
backend/tests/: test_scoring.py
frontend/: next.config.mjs  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/leads/[id]/: page.tsx
frontend/app/score/: page.tsx
frontend/components/: CursorGlow.tsx  GlassCard.tsx  GradientMesh.tsx  LeadCard.tsx  Nav.tsx  ScoreDial.tsx  StreamingExplanation.tsx
frontend/lib/: api.ts
