[project]
name = "lead-intelligence-ai"
version = "0.1.0"
description = "AI-powered lead scoring service (FastAPI + Claude)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
